[package]
name = "stm32l476"
version = "0.1.0"
edition = "2024"
description = "Peripheral access API for the STM32L476 microcontroller"
license = "OBSD"

[dependencies]
critical-section = { version = "1.0", optional = true }
cortex-m = "0.7.6"
cortex-m-rt = { version = "0.6.13", optional = true }
vcell = "0.1.2"

[features]
rt = ["cortex-m-rt/device"]
