[package]
name = "stm32l476"
version = "0.2.0"
edition = "2021"
description = "Peripheral access API for the STM32L476 microcontroller"
license = "0BSD"

[dependencies]
critical-section = { version = "1.0", optional = true }
cortex-m = "0.7.6"
cortex-m-rt = { version = "0.6.13", optional = true }
vcell = "0.1.2"

[features]
rt = ["cortex-m-rt/device"]
